--- a/app/src/main/res/layout/activity_check_in_.xml
+++ b/app/src/main/res/layout/activity_check_in_.xml
@@ -14,6 +14,12 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
+
+
+        <com.google.android.gms.maps.MapView
+            android:id="@+id/map"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
         <com.google.android.material.appbar.MaterialToolbar
             android:id="@+id/toolBar"
             android:layout_width="match_parent"
@@ -22,12 +28,6 @@
             app:title="Time Clock"
             app:titleCentered="true"
             app:titleTextAppearance="@style/tittle" />
-
-        <com.google.android.gms.maps.MapView
-            android:id="@+id/map"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/placeName"
             android:layout_width="match_parent"
@@ -89,7 +89,7 @@
                 android:layout_height="match_parent"
                 android:fontFamily="@font/bold700"
                 android:gravity="center"
-                android:text="Shift Shift"
+                android:text="Start Shift"
                 android:textColor="@color/white"
                 android:textSize="18sp" />
 
