--- a/app/src/main/res/layout/layout_feeds.xml
+++ b/app/src/main/res/layout/layout_feeds.xml
@@ -178,6 +178,7 @@
                     android:orientation="horizontal">
 
                     <ImageView
+                        android:id="@+id/like_img"
                         android:layout_width="22dp"
                         android:layout_height="22dp"
                         android:src="@drawable/like" />
