--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -68,6 +68,7 @@
             android:hint="Username"
             android:minHeight="55dp"
             android:paddingLeft="16dp"
+            android:maxLines="1"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView5" />
@@ -85,6 +86,8 @@
             android:hint="Password"
             android:minHeight="55dp"
             android:paddingLeft="16dp"
+            android:maxLines="1"
+            android:inputType="textPassword"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/usename" />
