--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -75,6 +75,7 @@
                     android:layout_toEndOf="@+id/lock"
                     android:background="@drawable/edittext_background"
                     android:fontFamily="@font/normal400"
+                    android:maxLines="1"
                     android:hint="Enter Username"
                     android:inputType="textPersonName"
                     android:minHeight="55dp"
