--- a/app/src/main/res/layout/activity_reset_password.xml
+++ b/app/src/main/res/layout/activity_reset_password.xml
@@ -76,6 +76,7 @@
                     android:layout_toEndOf="@+id/lock1"
                     android:background="@drawable/edittext_background"
                     android:fontFamily="@font/normal400"
+                    android:maxLines="1"
                     android:hint="Enter New Password"
                     android:inputType="textPassword"
                     android:minHeight="55dp"
@@ -118,6 +119,7 @@
                     android:layout_toEndOf="@+id/lock3"
                     android:background="@drawable/edittext_background"
                     android:fontFamily="@font/normal400"
+                    android:maxLines="1"
                     android:hint="Re-Enter New Password"
                     android:inputType="textPassword"
                     android:minHeight="55dp"
