--- a/app/src/main/res/layout/document_request_holder.xml
+++ b/app/src/main/res/layout/document_request_holder.xml
@@ -15,7 +15,7 @@
         android:layout_alignParentTop="true"
         android:layout_marginStart="24dp"
         android:layout_marginTop="16dp"
-        android:src="@drawable/ic_doc"
+        android:src="@drawable/document_notification"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -26,34 +26,36 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
         android:layout_toEndOf="@+id/image"
         android:fontFamily="@font/medium500"
         android:text="Leave Request"
-        android:textColor="@color/black"
-        android:textSize="16sp"
+        android:textColor="@color/text_color_light2"
+        android:textSize="14sp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toStartOf="@+id/status"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/image"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/metadata" />
 
     <TextView
         android:id="@+id/metadata"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_below="@+id/request_type"
         android:layout_alignParentEnd="true"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="2dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
         android:layout_toEndOf="@+id/image"
         android:fontFamily="@font/medium500"
         android:text="Sick Leave"
-        android:textColor="@color/text_color_light2"
-        android:textSize="14sp"
+        android:textColor="@color/black"
+        android:textSize="15sp"
         android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/image"
-        app:layout_constraintTop_toBottomOf="@+id/request_type" />
+        app:layout_constraintTop_toTopOf="parent" />
 
 
     <TextView
@@ -63,17 +65,15 @@
         android:layout_below="@+id/request_type"
         android:layout_alignParentEnd="true"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginTop="8dp"
         android:layout_toEndOf="@+id/image"
         android:fontFamily="@font/medium500"
         android:text="Requested on 27 May 2001"
         android:textColor="@color/text_color_light3"
-        android:textSize="14sp"
+        android:textSize="12sp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/image"
-        app:layout_constraintTop_toBottomOf="@+id/metadata" />
+        app:layout_constraintTop_toBottomOf="@+id/request_type" />
 
     <TextView
         android:id="@+id/status"
@@ -81,8 +81,8 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/request_type"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="24dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="16dp"
         android:layout_toEndOf="@+id/image"
         android:background="@drawable/approved_bg"
         android:fontFamily="@font/normal400"
@@ -92,10 +92,10 @@
         android:paddingBottom="8dp"
         android:text="Approved"
         android:textColor="@color/text_color_green"
-        android:textSize="13sp"
+        android:textSize="10sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/request_type" />
 
     <View
         android:layout_width="0dp"
@@ -103,10 +103,11 @@
         android:layout_alignParentStart="true"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="24dp"
+        android:layout_marginEnd="16dp"
         android:background="@color/line_black"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/image"
-        app:layout_constraintTop_toBottomOf="@+id/request_on" />
+        app:layout_constraintTop_toBottomOf="@+id/status" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
