--- a/app/src/main/res/layout/leave_request_holder.xml
+++ b/app/src/main/res/layout/leave_request_holder.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -15,7 +14,7 @@
         android:layout_alignParentTop="true"
         android:layout_marginStart="24dp"
         android:layout_marginTop="16dp"
-        android:src="@drawable/ic_calander_2"
+        android:src="@drawable/leave_notification"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -26,17 +25,17 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
         android:layout_toEndOf="@+id/image"
         android:fontFamily="@font/medium500"
         android:text="Leave Request"
-        android:textColor="@color/black"
-        android:textSize="16sp"
+        android:textColor="@color/text_color_light2"
+        android:textSize="14sp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toStartOf="@+id/status"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/image"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/from_to" />
 
     <TextView
         android:id="@+id/metadata"
@@ -45,15 +44,15 @@
         android:layout_below="@+id/request_type"
         android:layout_alignParentEnd="true"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="2dp"
+        android:layout_marginTop="16dp"
         android:layout_toEndOf="@+id/image"
-        android:fontFamily="@font/medium500"
+        android:fontFamily="@font/bold700"
         android:text="Sick Leave"
-        android:textColor="@color/text_color_light2"
-        android:textSize="14sp"
+        android:textColor="@color/black"
+        android:textSize="15sp"
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/image"
-        app:layout_constraintTop_toBottomOf="@+id/request_type" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/days"
@@ -61,14 +60,16 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/request_type"
         android:layout_alignParentEnd="true"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="8dp"
         android:layout_toEndOf="@+id/image"
-        android:fontFamily="@font/medium500"
+        android:fontFamily="@font/bold700"
         android:text="2 Days"
-        android:textColor="@color/text_color_light2"
-        android:textSize="14sp"
+        android:textColor="@color/black"
+        android:textSize="15sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/metadata"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/metadata"
         app:layout_constraintTop_toTopOf="@+id/metadata" />
 
@@ -77,7 +78,7 @@
         android:layout_width="16dp"
         android:layout_height="16dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="4dp"
+        android:layout_marginTop="8dp"
         android:src="@drawable/ic_cal_small"
         app:layout_constraintStart_toEndOf="@+id/image"
         app:layout_constraintTop_toBottomOf="@+id/metadata" />
@@ -109,16 +110,14 @@
         android:layout_alignParentEnd="true"
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="16dp"
         android:layout_toEndOf="@+id/image"
         android:fontFamily="@font/medium500"
         android:text="Requested on 27 May 2001"
         android:textColor="@color/text_color_light3"
-        android:textSize="14sp"
+        android:textSize="12sp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/image"
-        app:layout_constraintTop_toBottomOf="@+id/from_to" />
+        app:layout_constraintTop_toBottomOf="@+id/request_type" />
 
     <TextView
         android:id="@+id/status"
@@ -126,8 +125,8 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/request_type"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="24dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="16dp"
         android:layout_toEndOf="@+id/image"
         android:background="@drawable/approved_bg"
         android:fontFamily="@font/normal400"
@@ -137,10 +136,10 @@
         android:paddingBottom="8dp"
         android:text="Approved"
         android:textColor="@color/text_color_green"
-        android:textSize="13sp"
+        android:textSize="10sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/request_type" />
 
     <View
         android:layout_width="0dp"
@@ -148,10 +147,11 @@
         android:layout_alignParentStart="true"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="24dp"
+        android:layout_marginEnd="16dp"
         android:background="@color/line_black"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/image"
-        app:layout_constraintTop_toBottomOf="@+id/request_on" />
+        app:layout_constraintTop_toBottomOf="@+id/status" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
