--- a/app/src/main/res/layout/activity_check_in.xml
+++ b/app/src/main/res/layout/activity_check_in.xml
@@ -9,11 +9,17 @@
         android:id="@+id/frameLayout2"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
+
+
+        <com.google.android.gms.maps.MapView
+            android:id="@+id/map"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
         <com.google.android.material.appbar.MaterialToolbar
             android:id="@+id/toolBar"
             android:layout_width="match_parent"
@@ -22,12 +28,6 @@
             app:title="Time Clock"
             app:titleCentered="true"
             app:titleTextAppearance="@style/tittle" />
-
-        <com.google.android.gms.maps.MapView
-            android:id="@+id/map"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/placeName"
             android:layout_width="match_parent"
@@ -38,20 +38,19 @@
             android:background="@drawable/ed_background"
             android:drawableLeft="@drawable/ic_search"
             android:drawablePadding="8dp"
-            android:ellipsize="marquee"
-            android:gravity="center|left"
-            android:paddingLeft="16dp"
-            android:paddingTop="8dp"
-            android:paddingBottom="8dp"
+            android:paddingLeft="14dp"
             android:singleLine="true"
-            android:text="asdf"
+            android:ellipsize="marquee"
+            android:textSize="18sp"
             android:textColor="#1B2730"
-            android:textSize="18sp" />
+            android:gravity="center|left"
+            android:paddingTop="8dp"
+            android:paddingBottom="8dp" />
 
     </FrameLayout>
 
     <LinearLayout
-        android:id="@+id/linearLayout4"
+        android:id="@+id/linearLayout2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/check_in_layout_bg"
@@ -102,22 +101,22 @@
         </LinearLayout>
 
         <TextView
-            android:visibility="invisible"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="18dp"
             android:fontFamily="@font/medium500"
             android:gravity="center"
+            android:visibility="gone"
             android:text="Last Logged In at"
             android:textColor="@color/black" />
 
         <TextView
-            android:visibility="invisible"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:fontFamily="@font/medium500"
             android:gravity="center"
+            android:visibility="gone"
             android:text="2022-02-23 12:00:00" />
 
         <LinearLayout
@@ -129,13 +128,13 @@
             android:orientation="horizontal">
 
             <LinearLayout
+                android:id="@+id/timeSheet"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="22dp"
                 android:orientation="vertical">
 
                 <ImageView
-                    android:id="@+id/timeSheet"
                     android:layout_width="80dp"
                     android:layout_height="80dp"
                     android:layout_margin="8dp"
