--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -58,7 +58,7 @@
                 android:text="Notifications" />
 
             <Switch
-                android:id="@+id/switch1"
+                android:id="@+id/notifications"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:theme="@style/Color1SwitchStyle" />
