--- a/app/src/main/res/layout/leave_request_holder.xml
+++ b/app/src/main/res/layout/leave_request_holder.xml
@@ -61,6 +61,7 @@
         android:layout_below="@+id/request_type"
         android:layout_alignParentEnd="true"
         android:layout_marginStart="8dp"
+        android:layout_marginEnd="16dp"
         android:layout_toEndOf="@+id/image"
         android:fontFamily="@font/bold700"
         android:text="2 Days"
@@ -68,10 +69,33 @@
         android:textSize="15sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/metadata"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/edit"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/metadata"
         app:layout_constraintTop_toTopOf="@+id/metadata" />
+
+
+    <ImageView
+        android:id="@+id/delete"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:layout_marginEnd="16dp"
+        android:padding="3dp"
+        app:layout_constraintBottom_toBottomOf="@+id/days"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/days"
+        app:srcCompat="@drawable/remove" />
+
+    <ImageView
+        android:id="@+id/edit"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:layout_marginEnd="8dp"
+        android:padding="3dp"
+        app:layout_constraintBottom_toBottomOf="@+id/days"
+        app:layout_constraintEnd_toStartOf="@+id/delete"
+        app:layout_constraintTop_toTopOf="@+id/days"
+        app:srcCompat="@drawable/edit" />
 
     <ImageView
         android:id="@+id/cal2"
